--- a/.github/workflows/job.yml
+++ b/.github/workflows/job.yml
@@ -18,7 +18,7 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: pip install requests beautifulsoup4 lxml
+        run: pip install requests beautifulsoup4 lxml pandas openpyxl
 
       - name: Run script
         env:
